pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-214-link_reference_definitions.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/214-link_reference_definitions.md
---
[1m[34m┄[0m]8;;file://HOSTNAME/ROOT/url\[1m[34mFoo[0m]8;;\

[36m│[0m [3mbar[0m
