pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-215-link_reference_definitions.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/215-link_reference_definitions.md
---

[94m[104m [0m[1m[97m[104mbar[0m[94m[104m [0m


]8;;file://HOSTNAME/ROOT/url\[34mfoo[0m]8;;\
