pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-227-blank_lines.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/227-blank_lines.md
---
aaa


[94m[104m [0m[1m[97m[104maaa[0m
