pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-229-block_quotes.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/229-block_quotes.md
---

[94m[104m [0m[1m[97m[104mFoo[0m[94m[104m [0m

[36m│[0m 
[36m│[0m [3mbar[0m[3m baz[0m
